# pangaea_kaigi

./: .gitignore  ARCHITECTURE.md  Makefile  PRODUCT_OVERVIEW.md  README.md
backend/: .env.example  README.md  config.py  main.py  mock_data.txt  pyproject.toml  requirements.txt
backend/api/: routes.py  websocket.py
backend/models/: agent.py  discussion.py  message.py
backend/services/: agent_manager.py  context_retriever.py  discussion_engine.py  facilitator.py  openai_client.py
backend/utils/: prompts.py
docs/: frontend-requirements.md  frontend-settings-requirements.md  implementation-summary.md  mcp-integration.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/discussion/: page.tsx
frontend/components/chat/: ChatContainer.tsx  MessageBubble.tsx
frontend/components/context/: ContextCard.tsx  ContextPanel.tsx  MCPConfigModal.tsx  SourceStatusBadge.tsx
frontend/components/input/: TopicInput.tsx
frontend/hooks/: useContextRetrieval.ts  useWebSocket.ts
frontend/types/: agent.ts  context.ts  discussion.ts  message.ts
